--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.9.3",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "swiper": "^11.2.8",
     "zustand": "^5.0.5"
