--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
+    "sweetalert2": "^11.23.0",
     "swiper": "^11.2.8",
     "zustand": "^5.0.5"
   },
